  - Gets rid of content.functions.php (last remaining function moved to page.functions.php)
  - Refactor the cms_module_plugin function for performance).
  - Refactor the route-lookup functionality for performance.
  - The database connection class now accepts a single scalar for an argument when only one parameter is required in functions like GetOne()
  - TODO  Migrate the tasks related to the old admin log into AdminLog module.

CMSContentManager - remember to bump version
  - Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.

FileManager - remember to bump version
  - modified to use CMS_ROOT_URL

Installation Assistant - remember to bump version
  - Now require at least version 2.0.1 to upgrade

ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.

FileManager v1.6.4
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.

AdminLog
  - New core module to replace the adminlog.php file

Search  - remember to bump version
 - Now exports a command for cmscli


Version 2.2.2 - Hearts Content
----------------------------------
Core - General
 - Additional security improvement in CMSModule::GetTemplateResource().
 - Now Smarty_CMS is no longer derived from SmartyBC (uses our own wrapper class) which prevents all occurrences of {php} tags from running.
 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo.