@@ -61,6 +61,12 @@ Core - General
   - Refactor the cms_module_plugin function for performance).
   - Refactor the route-lookup functionality for performance.
   - The database connection class now accepts a single scalar for an argument when only one parameter is required in functions like GetOne()
+  - Remove the startup_mact_processing config entry, and replace it with content_processing_mode config entry that supports 3 values
+    0 - no content processing.
+    1 - do content processing AFTER the template page top
+    2 - do content processing BEFORE any template processing.  (default)
+    This config entry controls only when in the rendering, the default content block will be processed.
+  - Adds the {disable_template} plugin.  Only really useful when content_processing_mode == 2
   - TODO  Migrate the tasks related to the old admin log into AdminLog module.
 
 CMSContentManager - remember to bump version
